﻿23.6.27.4
=========
 + Fixed libScePad hooks on disconnected controllers disabling XInput
 + Blacklisted CefSharp.BrowserSubprocess and LariLauncher (Baldur's Gate 3)

23.6.27.3
=========
 + Fixed SKIF's new signal not being set when used in local injection

23.6.27.2
=========
 + Added support for SKIF's new signal-based Minimize on Inject feature

23.6.27.1
=========
 + Fixed SkipRedundantModeChanges=false always skipping SwapChain resizes (!)
 + Added extra detection for wrapped D3D11 devices (i.e. ReShade) when checking
     device-resource ownership during device context hooks.

23.6.27
=======
 + Fixed black screens in D3D11 when Special K and ReShade are used together
 + Fixed ReShade disabling HDR in D3D11 games

23.6.26.3
=========
 + Automatically load ReShade{32|64}.dll if it is in a game's directory, and
     create the necessary INI for version 5.x to load this way.

     >> This is equivalent to manually adding it as a Lazy plug-in

 + Added ReShade luminance control for its menus when used in native HDR games.

     >> This fixes Rec 2020 / Rec 709 colorspace mismatches in HDR10 games and
          80 nits brightness in scRGB games, so ReShade's UI works correctly.

 + Hook ExitProcess and TerminateProcess even if debug features are turned off.

23.6.26.2
=========
 + Merge pull request #71 from Nustat0/dgvoodoo-d3d12
    * Enabled 32-bit D3D12 for use with dgVoodoo. 

23.6.26.1
=========
 + Added per-game refresh setting to complement existing per-game resolution

     [Display.Monitor]
     RefreshRateForMonitor= (Current implementation rounds to nearest integer)

   >> This refresh rate will be applied when a game starts, and restored when
        the game exits. It uses the Refresh setting from the Display menu.

23.6.26
=======
 + Re-enabled ExitProcess hook to handle games that crash at exit

23.6.25
=======
 + Fixed Fullscreen Exclusive incompatibilities in many games
 + Enabled Rendundant DXGI Mode Change elimination by default