@@ -951,7 +951,6 @@ struct sk_config_t
     bool    display_debug_out   = false;
     bool    game_output         =  true;
     bool    central_repository  = false;
-    bool    ignore_rtss_delay   = false;
     bool    wait_for_debugger   = false;
     bool    return_to_skif      = false;
   } system;
